# search_libre

./: README.md  main.py  requirements.txt  scrapy.cfg
crawler/: custom_signals.py  database.py  settings.py  whoosh_backend.py
crawler/middleware/: defaults.py  filters.py  misc.py
crawler/spiders/: __init__.py
opennic_search/: Cargo.toml  config.json  opennic_search.pyi
opennic_search/css/: main.css
opennic_search/js/: add_url.js
opennic_search/src/: lib.rs  main.rs  utils.rs  web.rs
opennic_search/static/: robots.txt
opennic_search/templates/: add_url.tera  faq.tera  footer.tera  head.tera  index.tera  macros.tera  results.tera
