[package]
name = "opennic_search"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
once_cell = "1.20.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
pyo3 = "0.22.2" # we dont seem to need the `extension-module` feature, even though maturin displays a warning about it
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tera = "1.20.0"
url = "2.5.2"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "opennic_search_bin"
path = "src/main.rs"
